# monorepo

./: .gitignore  README.md
.github/workflows/: ping.yml
projects/: .dockerignore  .gitignore  docker-compose.yml  package.json
projects/kora/: docker-compose.both.yml
projects/kora/backend/: Cargo.toml  README.md  api.yaml  diesel.toml  docker-compose.yaml
projects/kora/backend-kora/: .dockerignore  .gitignore  Dockerfile  build-push.sh  docker-compose.backend.yml  docker-compose.server.yml  docker-compose.yml  package.json  schema.sql  test.http  tsconfig.json
projects/kora/backend-kora/src/: server.ts
projects/kora/backend-kora/src/controller/: booking.controller.ts  user.controller.ts
projects/kora/backend-kora/src/lib/: languageParser.ts  minio.ts  types.ts
projects/kora/backend-kora/src/middleware/: auth.ts  error.ts
projects/kora/backend-kora/src/prisma/: schema.prisma
projects/kora/backend-kora/src/routes/: booking.routes.ts  (+1 more)
projects/kora/backend/migrations/2024-12-23-015741_create_users/: up.sql
projects/kora/backend/src/: lib.rs  main.rs
projects/kora/backend/src/v1/: auth.rs  mod.rs
projects/kora/frontend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.web.yml  docker-compose.yml  middleware.ts  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
projects/kora/frontend/app/: animated-hero.tsx  animated-text.tsx  aurora-background.tsx  globals.css  layout.tsx  page.tsx
projects/kora/frontend/lib/: auth0.ts
projects/kora/frontend/types/: shared-types.d.ts  shared-types.ts
(+48 files in other folders)
