[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["typed-header"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
oauth2 = "4.4.2"
serde = "1.0.216"
serde_json = "1.0.134"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
